# scrapeprice

./: Cargo.toml  README.md  audiophil_sony.html
example/audiophil/: Cargo.toml
example/audiophil/src/: audiophil.rs  main.rs
src/: driver.rs  err.rs  example_main.rs  extract.rs  http.rs  implem.rs  lib.rs  main.rs  util.rs
src/implem/: audiophil.rs  mod.rs
