[package]
name = "example"
version = "0.1.0"
authors = ["Lewin Bormann <lewin@lewin-bormann.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scrapeprice = { version = "0.1.0", path = "../../" }
env_logger = "0.7"
log = "0.4"
tokio = {version = "0.2", features = ["rt-threaded", "net", "macros"] }
hyper = "0.13"
rex-regex = "0.1"

